Started work on flickr API.  Photos not showing up on page. Also, stopped links from opening new tab.  Now all open in current window.

--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,13 @@ h1 {
 
 /* Photos Section ----------------------*/
 
+button {
+  background: #680783;
+  box-shadow: 0px 5px 5px rgba(0,0,0, .5);
+  color: #fdfcf4;
+  border: none;
+}
+
 
 /* Main Styles -------------------------*/
 
